# Learning-Cpp

./: .gitignore  CLAUDE.md  README.md
1.Dice_Ass/: Dice.cpp
2.C++_Calculator/: C++_Calculator.cpp  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  console_main.cpp
2.C++_Calculator/core/: CalculatorEngine.cpp  CalculatorEngine.h  Memory.cpp  Memory.h  TrigCalculator.cpp  TrigCalculator.h
2.C++_Calculator/gui/: CalculatorWindow.cpp  CalculatorWindow.h  Calculator_GUI.pro  README.md  main.cpp  main_simple.cpp
2.C++_Calculator/mobile/: README.md  analysis_options.yaml  pubspec.yaml
2.C++_Calculator/mobile/android/app/: build.gradle
2.C++_Calculator/mobile/android/app/src/main/: AndroidManifest.xml
2.C++_Calculator/mobile/android/app/src/main/cpp/: CMakeLists.txt
2.C++_Calculator/mobile/cpp/: calculator_ffi.cpp
2.C++_Calculator/mobile/ios/: Podfile
2.C++_Calculator/mobile/ios/Runner/: Info.plist
2.C++_Calculator/mobile/lib/: calculator_engine.dart  calculator_screen.dart  ffi_calculator_engine.dart  main.dart
2.C++_Calculator/mobile/lib/widgets/: calculator_button.dart  calculator_display.dart
2.C++_Calculator/web/: README.md  index.html
2.C++_Calculator/web/assets/: calculator.css
2.C++_Calculator/web/src/: CalculatorEngine_Web.cpp  calculator.js
